--- a/plugin.yml
+++ b/plugin.yml
@@ -9,39 +9,34 @@ commands:
     sendmsg:
         description: Sends a message to a player, by itself.
         usage: /<command> <player> <message>
-        #permission: sendmessage.use
+        permission: sendmessage.use
     sendbc:
         description: Broadcasts a colored message to the entire server, by itself.
         usage: /<command> <message>
         aliases: sendbcast
-        #permission: sendmessage.broadcast
+        permission: sendmessage.broadcast
     sendchat:
         description: Broadcasts a message in the chat format specified in the config.
         usage: /<command> [-p player] <message>
-        #permission: sendmessage.chat
+        permission: sendmessage.chat
     smreload:
         description: Reloads SendMessage's configuration file.
         usage: /<command>
-        #permission: sendmessage.reload
+        permission: sendmessage.reload
     colors:
         description: Sends you a message to remind you of all the chat colors and formats.
         usage: /<command>
-        #permission: sendmessage.colors
+        permission: sendmessage.colors
     detectchatformat:
         description: Attempts to detect the chat format and stores the result in the config.
         usage: /<command> [setplayer]
         aliases: dcf
-        #permission: sendmessage.detectchatformat
+        permission: sendmessage.detectchatformat
+    sendtitle:
+        description: Sends a title to a player. Use -1 for default fadeIn/duration/fadeOut
+        usage: /<command> <player> <title> [subtitle] <fadeIn> <duration> <fadeOut>
+        permission: sendmessage.title
 permissions:
-    sendmessage.*:
-        description: Allows access to all SendMessage commands.
-        children:
-            sendmessage.use: true
-            sendmessage.broadcast: true
-            sendmessage.chat: true
-            sendmessage.reload: true
-            sendmessage.colors: true
-            sendmessage.detectchatformat: true
     sendmessage.use:
         description: Grants use of the /sendmsg command to send messages to one player at a time.
         default: op
@@ -58,5 +53,8 @@ permissions:
         description: Lets the user see the different color and formatting codes with /colors
         default: op
     sendmessage.detectchatformat:
-        description: Permits the player to use /dcf to automatically detect the chat format.
+        description: Allows the player to use /dcf to automatically detect the chat format.
+        default: op
+    sendmessage.title:
+        description: Allows the player to use /sendtitle
         default: op
